[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/DialogBoxFont-8pt.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/LetterButton.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/SelectedCharacter.png" type="Texture" id=3]

[node name="LetterButton" type="TextureButton"]
rect_min_size = Vector2( 10, 10 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -11.0
margin_right = 5.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -5.0
margin_right = 4.0
margin_bottom = 5.0
rect_min_size = Vector2( 8, 10 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.32549, 0.32549, 0.317647, 1 )
text = "a"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="." to="." method="show_icon"]
[connection signal="focus_exited" from="." to="." method="hide_icon"]
[connection signal="pressed" from="." to="." method="_self_pressed"]
